<resources>
    <string name="app_name">RetirementCalculator</string>
    <string name="name">name</string>
    <string name="birth_date">birth date</string>
    <string name="retire_with_67">Retire with 67</string>
    <string name="tv_result">you may have to work %1s years and %2s days</string>
    <string name="tv_result_1">you may have to work %1s years and %2s day</string>
    <string name="tv_result_2">you may have to work %1s year and %2s days</string>
    <string name="tv_result_3">you may have to work %1s year and %2s day</string>
    <string name="tv_result_4">you may have to work %1s days</string>
    <string name="tv_result_5">you may have to work %1s day</string>
    <string name="tv_result_6">today is your last workday</string>
    <string name="tv_seconds">Only %1s s remaining</string>
    <string name="tv_name">Hello %1s, </string>
    <string name="toast_dateOfBirth">Your date of birth can\'t be in future</string>
    <string name="toast_name">Please enter your name</string>
    <string name="btn_retirement">Remaining time to retirement</string>
    <string name="retired">You are retired</string>
    <string name="set_birthdate">set birthdate</string>
    <string name="retire_with_65">Retire with 65</string>
    <string name="birthdate_format" >MM.dd.yyyy</string>
    <string name="retdate_text">Anticipate the %1s,</string>
    <string name="ret_date_2">this is your retirement date</string>
</resources>